// UniPlan — Complete Data Model (ChartDB / DBML)
// MongoDB collections in "mongodb" schema | PostgreSQL tables in "public" schema
// Import into chartdb.io

// ═══════════════════════════════════════════════════════════════
//  MongoDB Schema — Application Primary
// ═══════════════════════════════════════════════════════════════

Table "mongodb"."events" {
  "_id" objectid [pk, not null]
  "uniqueCode" varchar(24) [unique, note: 'EVT-061']
  "title" varchar(100) [not null]
  "description" text [not null]
  "eventType" varchar(30) [not null, note: 'WORKSHOP | TALK | SPORTS | VOLUNTEERING | OTHER']
  "date" date [not null]
  "startTime" varchar(5) [not null, note: 'HH:MM']
  "endTime" varchar(5) [not null, note: 'HH:MM']
  "location" varchar(100) [not null]
  "maxAttendees" int [not null]
  "status" varchar(20) [not null, note: 'UPCOMING | IN_PROGRESS | FINISHED']
  "organizer" jsonb [not null, note: '{ userId, name, type }']
  "typeDetails" jsonb [not null, note: 'Discriminator fields. Embedded registrations[] and messages[]']
  "createdAt" timestamp [not null]
  "updatedAt" timestamp [not null]

  Indexes {
    uniqueCode [unique, name: "events_uniqueCode"]
    eventType [name: "events_eventType"]
    date [name: "events_date"]
    status [name: "events_status"]
  }
}

Table "mongodb"."organizers" {
  "_id" objectid [pk, not null]
  "userId" varchar(15) [unique, not null, note: 'Cross-DB → users.student_id / users.employee_id']
  "name" varchar(100) [not null]
  "email" varchar(100) [not null]
  "type" varchar(20) [not null, note: 'PROFESSOR | STUDENT_LEADER | BIENESTAR_STAFF']
  "profile" jsonb [note: '{ semester, department, specialization, adminArea }']
  "approvedByAdmin" boolean [not null, default: false]
  "isActive" boolean [not null, default: true]
  "createdAt" timestamp [not null]
  "updatedAt" timestamp [not null]

  Indexes {
    approvedByAdmin [name: "organizers_approved"]
    isActive [name: "organizers_active"]
    type [name: "organizers_type"]
  }
}

// ═══════════════════════════════════════════════════════════════
//  PostgreSQL Schema — Auth + Statistics
// ═══════════════════════════════════════════════════════════════

Table "public"."users" {
  "username" varchar(30) [pk, not null]
  "password_hash" varchar(100) [not null]
  "role" varchar(20) [not null, note: 'STUDENT | ORGANIZER | ADMIN']
  "student_id" varchar(15)
  "employee_id" varchar(15)
  "is_active" boolean [not null, default: true]
  "created_at" timestamp [not null, default: `now()`]

  Note: 'Only app-writable institutional table. FK to students XOR employees with CHECK constraint.'
}

Table "public"."uniplan_statistics" {
  "id" serial [pk, not null, increment]
  "event_id" varchar(24) [unique, not null, note: 'Cross-DB → mongodb.events._id']
  "total_registered" int [not null, default: 0]
  "total_cancelled" int [not null, default: 0]
  "total_attended" int [not null, default: 0]
  "demographics" jsonb [not null, default: '{"by_faculty":{},"by_program":{},"by_campus":{}}']
  "last_updated" timestamp [not null, default: `now()`]

  Note: 'Updated by Observer pattern. EventBus → StatisticsObserver → PostgreSQL.'
}

// ═══════════════════════════════════════════════════════════════
//  PostgreSQL Schema — Institutional (Read-Only)
// ═══════════════════════════════════════════════════════════════

Table "public"."students" {
  "id" varchar(15) [pk, not null, note: 'e.g. A00123456']
  "first_name" varchar(30) [not null]
  "last_name" varchar(30) [not null]
  "email" varchar(50) [not null]
  "birth_date" date [not null]
  "birth_place_code" int [not null]
  "campus_code" int [not null]
}

Table "public"."employees" {
  "id" varchar(15) [pk, not null]
  "first_name" varchar(30) [not null]
  "last_name" varchar(30) [not null]
  "email" varchar(30) [not null]
  "contract_type" varchar(30) [not null]
  "employee_type" varchar(30) [not null]
  "faculty_code" int [not null]
  "campus_code" int [not null]
  "birth_place_code" int [not null]
}

Table "public"."enrollments" {
  "student_id" varchar(15) [not null]
  "NRC" varchar(10) [not null]
  "enrollment_date" date [not null]
  "status" varchar(15) [not null, note: 'Active | Passed | Failed | Withdrawn']
}

Table "public"."groups" {
  "NRC" varchar(10) [pk, not null]
  "number" int [not null]
  "semester" varchar(6) [not null]
  "subject_code" varchar(10) [not null]
  "professor_id" varchar(15) [not null]
}

Table "public"."subjects" {
  "code" varchar(10) [pk, not null]
  "name" varchar(30) [not null]
  "program_code" int [not null]
}

Table "public"."programs" {
  "code" int [pk, not null]
  "name" varchar(40) [not null]
  "area_code" int [not null]
}

Table "public"."areas" {
  "code" int [pk, not null]
  "name" varchar(20) [not null]
  "faculty_code" int [not null]
  "coordinator_id" varchar(15) [not null]
}

Table "public"."faculties" {
  "code" int [pk, not null]
  "name" varchar(40) [not null]
  "location" varchar(15) [not null]
  "phone_number" varchar(15) [not null]
  "dean_id" varchar(15)
}

Table "public"."campuses" {
  "code" int [pk, not null]
  "name" varchar(20)
  "city_code" int [not null]
}

Table "public"."cities" {
  "code" int [pk, not null]
  "name" varchar(20) [not null]
  "dept_code" int [not null]
}

Table "public"."departments" {
  "code" int [pk, not null]
  "name" varchar(20) [not null]
  "country_code" int [not null]
}

Table "public"."countries" {
  "code" int [pk, not null]
  "name" varchar(20) [not null]
}

Table "public"."contract_types" {
  "name" varchar(30) [pk, not null]
}

Table "public"."employee_types" {
  "name" varchar(30) [pk, not null]
}

// ═══════════════════════════════════════════════════════════════
//  Relationships
// ═══════════════════════════════════════════════════════════════

// ── Cross-DB: MongoDB ↔ PostgreSQL ──
Ref: "mongodb"."organizers"."userId" > "public"."users"."student_id"
Ref: "mongodb"."organizers"."userId" > "public"."users"."employee_id"
Ref: "public"."uniplan_statistics"."event_id" > "mongodb"."events"."_id"

// ── Auth ──
Ref: "public"."users"."student_id" > "public"."students"."id"
Ref: "public"."users"."employee_id" > "public"."employees"."id"

// ── Academic enrollment chain ──
Ref: "public"."enrollments"."student_id" > "public"."students"."id"
Ref: "public"."enrollments"."NRC" > "public"."groups"."NRC"
Ref: "public"."groups"."professor_id" > "public"."employees"."id"
Ref: "public"."groups"."subject_code" > "public"."subjects"."code"
Ref: "public"."subjects"."program_code" > "public"."programs"."code"
Ref: "public"."programs"."area_code" > "public"."areas"."code"
Ref: "public"."areas"."faculty_code" > "public"."faculties"."code"
Ref: "public"."areas"."coordinator_id" > "public"."employees"."id"
Ref: "public"."faculties"."dean_id" > "public"."employees"."id"

// ── Employment ──
Ref: "public"."employees"."contract_type" > "public"."contract_types"."name"
Ref: "public"."employees"."employee_type" > "public"."employee_types"."name"
Ref: "public"."employees"."faculty_code" > "public"."faculties"."code"
Ref: "public"."employees"."campus_code" > "public"."campuses"."code"

// ── Location ──
Ref: "public"."students"."birth_place_code" > "public"."cities"."code"
Ref: "public"."employees"."birth_place_code" > "public"."cities"."code"
Ref: "public"."students"."campus_code" > "public"."campuses"."code"
Ref: "public"."campuses"."city_code" > "public"."cities"."code"

// ── Geographic hierarchy ──
Ref: "public"."cities"."dept_code" > "public"."departments"."code"
Ref: "public"."departments"."country_code" > "public"."countries"."code"
